--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<!doctype html>
-<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <title>99 | ٩٩ ™   | Server Website</title>
-  <meta name="description" content="Modern, responsive landing page for a Discord server. Live member counts, avatars, theme toggle, join button, rules, and beautiful animations." />
+
+  <!-- Title & Description -->
+  <title>99 | ٩٩ ™ | Server Website</title>
+  <meta name="title" content="99 | ٩٩ ™ | Server Website" />
+  <meta name="description" content="The Community To Be — Developed by A3." />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/a3clinic/99/blob/main/99%20(1).png?raw=true">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/a3clinic/99/blob/main/99%20(1).png?raw=true">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://alrab3.xyz" />
+  <meta property="og:title" content="99 | ٩٩ ™ | Server Website" />
+  <meta property="og:description" content="The Community To Be — Developed by A3." />
+  <meta property="og:image" content="https://github.com/a3clinic/99/blob/main/99%20(1).png?raw=true" />
+
+  <!-- Twitter Card -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://alrab3.xyz" />
+  <meta property="twitter:title" content="99 | ٩٩ ™ | Server Website" />
+  <meta property="twitter:description" content="The Community To Be — Developed by A3." />
+  <meta property="twitter:image" content="https://github.com/a3clinic/99/blob/main/99%20(1).png?raw=true" />
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet" />
 
   <style>
     :root{
