--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="KNRC X Alnajat Launcher" />
+<meta property="og:description" content="Access your tools and resources for KNRC projects with our interactive launcher!" />
+<meta property="og:image" content="https://i.ibb.co/vCF5tR84/download-20.png" />
+<meta property="og:url" content="https://alrab3.xyz" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="KNRC X Alnajat Launcher" />
+<meta name="twitter:description" content="Access your tools and resources for KNRC projects with our interactive launcher!" />
+<meta name="twitter:image" content="https://i.ibb.co/vCF5tR84/download-20.png" />
+<meta name="twitter:url" content="https://alrab3.xyz" />
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>KNRC X Alnajat</title> 
