--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ body {
         <span>Builder & Programmer</span>
       </div>
       <div class="member">
-        <strong>Abdulrahman Mohammed AbdulSattar</strong>
+        <strong>Abdulrahman Mohammed Abdulstar</strong>
         <span>Builder & Programmer</span>
       </div>
     </div>
