--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
   <div class="user-card" data-user="abdulrahman">
     <div class="card-border-top"></div>
-    <img class="img" src="https://i.ibb.co/Xx9s6pF/abdulrahman.png" alt="Abdulrahman">
+    <img class="img" src="https://i.ibb.co/TMvrBqpG/Hamani-Dishdasha.jpg" alt="Abdulrahman">
     <span>Abdulrahman</span>
     <p class="job">Builder & Programmer</p>
     <button class="cssbuttons-io-button">
@@ -430,7 +430,7 @@ const userImages = {
   hamada: "https://i.ibb.co/rGv2q2q5/IMG-20251121-WA0027-1-1.jpg",
   amir: "https://i.ibb.co/N2xbmCGw/Amir-majdi-alomari.jpg",
   baraa: "https://i.ibb.co/8g2vKpV3/Baraa-picture.jpg",
-  abdulrahman: "https://i.ibb.co/Xx9s6pF/abdulrahman.png"
+  abdulrahman: "https://i.ibb.co/TMvrBqpG/Hamani-Dishdasha.jpg"
 };
 
 document.querySelectorAll(".user-card button").forEach(btn => {
