--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
   <h2>Select Your Profile</h2>
 
   <!-- Coach on top -->
-  <div class="user-card" data-user="hamada">
+  <div class="user-card" data-user="moh">
     <div class="card-border-top"></div>
-    <img class="img" src="https://i.ibb.co/rGv2q2q5/IMG-20251121-WA0027-1-1.jpg" alt="Hamada Elsaid">
-    <span>Hamada Elsaid</span>
+    <img class="img" src="https://i.ibb.co/rGv2q2q5/IMG-20251121-WA0027-1-1.jpg" alt="Mohammed Saad">
+    <span>Mohammed Saad</span>
     <p class="job">Coach / Teacher</p>
     <button class="cssbuttons-io-button">
       Select
@@ -389,7 +389,7 @@
   <div class="team">
     <!-- Coach first -->
     <div class="member">
-      <strong>Hamada Elsaid</strong>
+      <strong>Mohammed Saad</strong>
       <span>Coach / Teacher</span>
     </div>
 
@@ -416,7 +416,7 @@
 <script>
 
 const userPasswords = {
-  hamada: "h",    // Hamada's password
+  moh: "moh",    // Hamada's password
   amir: "a3!!",
   baraa: "b",
   abdulrahman: "abd"
