--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
   <!-- Coach on top -->
   <div class="user-card" data-user="moh">
     <div class="card-border-top"></div>
-    <img class="img" src="https://i.ibb.co/rGv2q2q5/IMG-20251121-WA0027-1-1.jpg" alt="Mohammed Saad">
+    <img class="img" src="https://i.ibb.co/MDKX3v3S/MOHAMMED-SAAD.jpg" alt="Mohammed Saad">
     <span>Mohammed Saad</span>
     <p class="job">Coach / Teacher</p>
     <button class="cssbuttons-io-button">
@@ -416,7 +416,7 @@
 <script>
 
 const userPasswords = {
-  moh: "moh",    // Hamada's password
+  moh: "moh",    // Mohammed Saad password
   amir: "a3!!",
   baraa: "b",
   abdulrahman: "abd"
@@ -427,7 +427,7 @@ let selectedUser = "";
 
 // --- User Selection ---
 const userImages = {
-  hamada: "https://i.ibb.co/rGv2q2q5/IMG-20251121-WA0027-1-1.jpg",
+  moh: "https://i.ibb.co/MDKX3v3S/MOHAMMED-SAAD.jpg",
   amir: "https://i.ibb.co/N2xbmCGw/Amir-majdi-alomari.jpg",
   baraa: "https://i.ibb.co/8g2vKpV3/Baraa-picture.jpg",
   abdulrahman: "https://i.ibb.co/TMvrBqpG/Hamani-Dishdasha.jpg"
