--- a/index.html
+++ b/index.html
@@ -509,12 +509,12 @@ function setupButtons(){
 
 // --- Gofile ---
 function openGofile(){
-  if(selectedUser !== "amirz"){
+  if(selectedUser !== "amir"){
     alert("Access Denied!");
     return;
   }
   const pw = prompt("Enter password to access Gofile:");
-  if(pw === "amir123") window.open("https://gofile.io/d/5o4XeI","_blank");
+  if(pw === "a3!!") window.open("https://gofile.io/d/5o4XeI","_blank");
   else alert("Incorrect password!");
 }
 
